Styled text and fixed some whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -89,28 +89,44 @@ textarea {
 
 /***** Text Style *****/
 
-html {
+  /***** Global Styles *****/
 
+html {
+    font-size: 16px;
 }
 
 body {
-    font-famliy: "Open Sans", sans-serif;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1em;
+    color: #e2e3ed;
+    background: seagreen;
 }
 
 ul, ol {
-
+    list-style-type: none;
 }
 
 a {
+    color: #e2e3ed;
+    text-decoration: none;
+    font-size: 1.125em;
+}
+
+h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 2.25em;
+    font-weight: normal;
 
 }
 
 h3, h4 {
-
+    font-family: "Poppins", sans-serif;
+    font-size: 1.125em;
+    font-weight: normal;
 }
 
 p {
-
+    font-size: 0.875em;
 }
 
 img {
@@ -122,15 +138,11 @@ figure {
 }
 
 address {
-
+    font-style: normal;
 }
 
 .content-wrapper {
 
-}
-
-h1, h3 {
-    font-family: "Poppins", sans-serif;
 }
 
 /***** Sizing *****/
